# LLMX

./: .gitignore  =0.26.0  =0.30.0  Dockerfile  Preliminary_Results.pptx  README.md  data_preprocessing.py  docker-compose.yaml  googlevertexai_rag.ipynb  grad_rag.ipynb  handle_bib.py  main.py  pyproject.toml  rag.ipynb  rag_pipeline.ipynb  rag_shap.py  ragbioasq.ipynb  requirements.txt  t-flan.ipynb  utils.py
.github/: copilot-instructions.md
Experiment_data/: shapley_rag_experiment_details.csv  shapley_rag_experiment_summary.csv
Notebooks/: 2wiki.ipynb  2wiki_process.ipynb  2wikimultihop.ipynb  NQ_SHAP_experiments.ipynb  SPEX_test.ipynb  answered.txt  complementarity.ipynb  complementarity_2wiki.ipynb  data_preprocessing.py  dynamic_rank.ipynb  example.ipynb  gen_emb_med.py  googlevertexai_rag.ipynb  hotpot.py  hotpotaq.ipynb  musique.py  musique_4.ipynb  musique_shap.ipynb  musique_shap_appendix.ipynb  nq_sentence_sources.ipynb  rag.ipynb  rag_dpsearch.ipynb  rag_pipeline.ipynb  ragbioasq.ipynb  sentence_level.ipynb  synergy_duplicates.py  synthetic_synergy.ipynb
SHapRAG/: Weightedfm.py  Weightedfm2.py  __init__.py  rag_shap.py  rag_shap_ex.py  rag_shap_parallel.py  ragshap_experiments.py  utils.py
data/: BIOASK.csv  NQ.csv  nq_reforged.csv
gabriele_testing/: experiment_gab.py  merge_shuffle_datasets.ipynb  test_merged.csv
scripts/: 2wiki.py  Exact_shap_detail.json  Exact_shap_details.csv  Experiment_2.py  analyse_result.ipynb  bioask_llama31.py  bioask_new.csv  bioask_no_rag.py  experiment_1.py  experiment_3.py  generate_plots.py  hotpotQA_explore.ipynb  (+18 more)
(+2397 files in other folders)
