[project]
name = "llmx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "vertexai>=1.71.1",
]

[dependency-groups]
dev = [
    "accelerate>=1.7.0",
    "cython>=3.1.1",
    "ipykernel>=6.29.5",
    "google>=3.0.0",
    "google-oauth2-tool>=0.0.3",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pygam>=0.9.1",
    "scikit-learn>=1.6.1",
    "vertexai>=1.71.1",
    "xgboost>=3.0.2",
]
visual = [
    "seaborn>=0.13.2",
]
