[project]
name = "llmx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "google-oauth2-tool>=0.0.3",
    "ipykernel>=6.30.1",
    "vertexai>=1.71.1",
]

[dependency-groups]
dev = [
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.6",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
]
